--- a/index.html
+++ b/index.html
@@ -83,12 +83,18 @@
                     </select>
                     <label>Fur Color</label>
                   </div>
-                <div><input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="25" tabindex="0"></div>  
-                    
+                 <div class="range-field">
+                    <label for="horn">Horn Length</label>
+                    <input type="range" min="5" max="25" value="15" name="horn" id="horn" class="validate" required>
+                    <div class="horn-justify">
+                        <p>5 cm</p>
+                        <p class="right-align">25 cm</p>
+                    </div>
+           </div> 
                    <div class="input-field">
           <input id="email" type="email" class="validate">
           <label for="email" data-error="Not a valid e-mail adress" data-success="right">Email adress</label>
-          <div class="icon"><i class="material-icons">warning</i></div>
+          <p class="right-align"><i class="material-icons">warning</i></p>
 
                 </div>
    
@@ -98,11 +104,11 @@
                   
                   <p>
                     <input type="checkbox" class="filled-in" id="filled-in-box"  />
-                    <label for="filled-in-box">I agree the terms and conditions</label>
+                    <label for="filled-in-box">I accept terms and conditions</label>
                   </p>
-                  <p>
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">
-                    Submit
+                  <p class="boton">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent boton" type="submit">
+                    Get my unicorn
                     </button>
                   </p>
                 </form>
