--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
         <div class="mdl-layout__drawer">
           <span class="mdl-layout-title">Build-A-Unicorn!</span>
           <div class="avatar">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/234228/cat.jpg" alt="Kaptain Kitty" class="avatar-img">
+            <img src="img/unicorn.jpg" alt="charlie" class="avatar-img">
           </div>
           <!-- /.avatar -->
-          <div class="drawer-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur officiis animi, soluta ab deserunt dolore fugit voluptatem laboriosam, magni. Eligendi quia quasi qui cupiditate optio fugit vel, suscipit harum illum.
+          <div class="drawer-text">This is a page to create your unicorn. I hope you like it.
           </div>
           <!-- /.drawer-text -->
         </div>
@@ -83,18 +82,20 @@
                     </select>
                     <label>Fur Color</label>
                   </div>
-                 <div class="range-field">
+             <!--    <div class="">
                     <label for="horn">Horn Length</label>
                     <input type="range" min="5" max="25" value="15" name="horn" id="horn" class="validate" required>
-                    <div class="horn-justify">
-                        <p>5 cm</p>
-                        <p class="right-align">25 cm</p>
-                    </div>
-           </div> 
+                    <label for="horn">5cm</label>
+                    <label for="horn" class="right-align">25cm</label>
+
+           </div>  -->
                    <div class="input-field">
           <input id="email" type="email" class="validate">
           <label for="email" data-error="Not a valid e-mail adress" data-success="right">Email adress</label>
-          <p class="right-align"><i class="material-icons">warning</i></p>
+          <p class="right-align iconito">
+          <label for="email" data-error="Not a valid e-mail adress" data-success="right"><i class="material-icons">warning</i></label>
+
+          </p>
 
                 </div>
    
